--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -51,5 +52,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "io.reactivex.rxjava3:rxjava:3.0.11"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
 }
